[metadata]
name = buildme
version = 0.1.0
author = Adwaith Rajesh
author_email = adwaithrajesh3180@gmail.com
description = A simple command runner disguised as a build system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adwaith-Rajesh/buildme
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10.0

[options.entry_points]
console_scripts =
    buildme = buildme.cli:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
